RESOLVED FIXED301487
Fix use of WK_API_AVAILABLE(ios(9_0)) in WKWebViewConfiguration.h and WKWebViewPrivate.h
https://bugs.webkit.org/show_bug.cgi?id=301487
Summary Fix use of WK_API_AVAILABLE(ios(9_0)) in WKWebViewConfiguration.h and WKWebVi...
David Kilzer (:ddkilzer)
Reported 2025-10-26 10:30:44 PDT
Fix use of WK_API_AVAILABLE(ios(9_0)) in WKWebViewConfiguration.h and WKWebViewPrivate.h. ``` $ ./Tools/Scripts/check-webkit-style --filter='-,+build/wk_api_available' Source/WebKit [...] Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfiguration.h:188: error: [build/wk_api_available] ios(9_0) is invalid; version number should have one decimal Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:769: error: [build/wk_api_available] ios(9_0) is invalid; version number should have one decimal Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:771: error: [build/wk_api_available] ios(9_0) is invalid; version number should have one decimal Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:773: error: [build/wk_api_available] ios(9_0) is invalid; version number should have one decimal [...] ```
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-26 10:30:57 PDT
David Kilzer (:ddkilzer)
Comment 2 2025-10-26 10:33:14 PDT
EWS
Comment 3 2025-10-28 14:06:47 PDT
Committed 302258@main (e0c7cf9c3d7b): <https://commits.webkit.org/302258@main> Reviewed commits have been landed. Closing PR #53009 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.