Fix use of WK_API_AVAILABLE(ios(9_0)) in WKWebViewConfiguration.h and WKWebViewPrivate.h <https://bugs.webkit.org/show_bug.cgi?id=301487> <rdar://163443172>

Reviewed by Wenson Hsieh.

* Source/WebKit/UIProcess/API/Cocoa/WKWebViewConfiguration.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:
- Change ios(9_0) to ios(9.0).

Canonical link: https://commits.webkit.org/302258@main